--- a/view/PlanLayerFilterDialog.ui
+++ b/view/PlanLayerFilterDialog.ui
@@ -34,6 +34,11 @@
       <height>231</height>
      </rect>
     </property>
+    <column>
+     <property name="text">
+      <string notr="true">1</string>
+     </property>
+    </column>
    </widget>
   </widget>
   <widget class="QGroupBox" name="groupBox_2">
@@ -57,6 +62,11 @@
       <height>321</height>
      </rect>
     </property>
+    <column>
+     <property name="text">
+      <string notr="true">1</string>
+     </property>
+    </column>
    </widget>
   </widget>
   <widget class="QPushButton" name="ok_button">
